feat: update docker hub repo name

--- a/discord/docker-compose.yml
+++ b/discord/docker-compose.yml
@@ -1,5 +1,5 @@
 sinusbot:
-  image: sinusbot/docker:discord
+  image: trugamr/sinusbot-docker-yt-dlp:discord
   restart: always
   ports:
     - 8087:8087
